# tphrase

./: Readme.md  copyright  manual.md  meson.build  tphrase.doxygen  tphrase_internal.doxygen
.github/workflows/: unit_test.yml
include/tphrase/: Generator.h  error_utils.h
include/tphrase/common/: InputIterator.h  TempRefHolder.h  ext_context.h  gsub_func.h  random_func.h  syntax_id.h
src/: CharFeeder.cpp  CharFeeder.h  DataGsubs.cpp  DataGsubs.h  DataOptions.cpp  DataOptions.h  DataPhrase.cpp  DataPhrase.h  DataProductionRule.cpp  DataProductionRule.h  DataSyntax.cpp  DataSyntax.h  DataText.cpp  DataText.h  Generator.cpp  Syntax.cpp  parse.cpp  parse.h  random.cpp  random.h  select_and_generate.h  trunc_syntax.cpp
test/: UnitTest.cpp  UnitTest.h  meson.build  test_class_Generator.cpp  test_class_InputIterator.cpp  test_class_Syntax.cpp  test_class_TempRefHolder.cpp  test_error_utils.cpp  test_generate.cpp  test_main.cpp  test_parse.cpp  unit_test_utility.cpp  unit_test_utility.h
